--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -19,7 +19,7 @@
     <string name="app_author"><a href="http://www.marcozanetti.it">Marco Zanetti</a></string>
     <string name="author_email">Contattami: <a href="mailto:ilsecondodasinistra@gmail.com">ilsecondodasinistra@gmail.com</a></string>
     <string name="app_info">A che ora devi alzarti domani?\n\nSembra una domanda facile, ma non lo è. Dipende tutto da quello che devi fare prima di uscire: magari pensi che domattina ti farai una doccia, o forse l\'hai già fatta stasera. Forse farai colazione, o forse no. Magari sai che dovrai portare fuori il cane, o fare il saluto al sole.\n\nScegliere il momento giusto per alzarsi non è facile perché, in realtà, quello che sai è soltanto a che ora dovrai essere fuori di casa. Ecco dove ti viene in aiuto Parakeet! Ti basta impostare l\'orario di uscita da casa e poi selezionare dalla lista le azioni che domani dovrai fare. Parakeet calcolerà per te il tempo necessario ed imposterà la sveglia per te.\n\nChiaramente ognuno di noi è diverso, così la lista delle azioni in Parakeet è completamente personalizzabile ed estendibile. Insomma, hai tutto quello che ti serve per svegliarti presto, ma non un minuto prima!\n\nProva Parakeet oggi, ti sveglierai più felice domani.</string>
-    <string name="app_changelog">Versione 1.0 - Prima versione.\n\nIl progetto grafico del logo è di <a href="http://it.linkedin.com/in/matteosimoncelli">Matteo Simoncelli</a></string>
+    <string name="app_changelog">Versione 1.3\n\nIl progetto grafico del logo è di <a href="http://it.linkedin.com/in/matteosimoncelli">Matteo Simoncelli</a></string>
     <string name="changelog_title">Changelog</string>
     <string name="action_about">Info su Parakeet</string>
     
@@ -48,5 +48,6 @@
 	<string name="set_alarm_help_1">Imposta la sveglia</string>
 	<string name="set_alarm_help_2">Quando hai finito di selezionare le attività premi il pulsante con la sveglia</string>
 	<string name="next_help">Next</string>
+	<string name="action_help">Guida</string>
 	
 </resources>
