--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="app_author"><a href="http://www.marcozanetti.it">Marco Zanetti</a></string>
     <string name="author_email">Mail me: <a href="mailto:ilsecondodasinistra@gmail.com">ilsecondodasinistra@gmail.com</a></string>
     <string name="app_info">What time should you get up tomorrow?\n\nIt does sound like a simple question, but we know it\'s not. It all depends on what you need to do before you leave: maybe you plan to get a shower, maybe you already took one. Maybe you\'re having breakfast, maybe not. Maybe you\'re going to practice some Yoga, maybe you\'re giving up this hobby for tomorrow.\n\nChoosing the right time to wake up is not easy, because you actually know just the time you need to put your foor out of the door. This is where Parakeet comes in handy! You set up what time you need to leave the house, and then every night you just need to check or uncheck the activities you\'re going to do tomorrow, before you leave. The list is of course customizable according to your needs and preferences. It\'s all you need to get up early, but not a minute earlier than you need!\n\nTry Parakeet today, wake up happier tomorrow.</string>
-    <string name="app_changelog">Version 1.0 - First Version.\n\nLogo by<a href="http://it.linkedin.com/in/matteosimoncelli">Matteo Simoncelli</a></string>
+    <string name="app_changelog">Version 1.3\n\nLogo by<a href="http://it.linkedin.com/in/matteosimoncelli">Matteo Simoncelli</a></string>
     <string name="changelog_title">Changelog</string>
     <string name="action_about">About Parakeet</string>
 
@@ -32,21 +32,25 @@
     <string name="title_activity_settings">Options Menu</string>
     <string name="drawer_open">Options Menu</string>
     <string name="drawer_close">Parakeet</string>
-	<string name="notification_on_leaving">Notification on exit time</string>
-	
-	<string name="whatsnew">
-        - Added application drawer on the left\n
+    <string name="notification_on_leaving">Notification on exit time</string>
+    <string name="whatsnew">        - Added application drawer on the left\n
         - Added a notification when it\'s exit time. You can disable it in the new Settings screen\n 
-        - Added this What\'s new screen\n
-    </string>
-    
-	<!-- Help overlay -->
-	<string name="help_finished">The short guide (wasn\'t it short?) has finished, now feel free to use the app!</string>
-	<string name="time_to_leave_help_1">When should you go?</string>
-	<string name="time_to_leave_help_2">Here you can set the time you should leave</string>
-	<string name="new_thing_help_1">Add things to do</string>
-	<string name="new_thing_help_2">If you need to add a new thing to do use this.</string>
-	<string name="set_alarm_help_1">Set alarm</string>
-	<string name="set_alarm_help_2">Once you\'re done, you can trigger the alarm by tapping here</string>
-	<string name="next_help">Next</string>
+        - Added this What\'s new screen\n</string>
+
+    <!-- Help overlay -->
+    <string name="help_finished">The short guide (wasn\'t it short?) has finished, now feel free to use the app!</string>
+    <string name="time_to_leave_help_1">When should you go?</string>
+    <string name="time_to_leave_help_2">Here you can set the time you should leave</string>
+    <string name="new_thing_help_1">Add things to do</string>
+    <string name="new_thing_help_2">If you need to add a new thing to do use this.</string>
+    <string name="set_alarm_help_1">Set alarm</string>
+    <string name="set_alarm_help_2">Once you\'re done, you can trigger the alarm by tapping here</string>
+    <string name="next_help">Next</string>
+    <string name="action_help">Help</string>
+
+    <!-- Undo bar -->
+    <string name="action">Perform action</string>
+    <string name="undobar_sample_message">Action performed.</string>
+    <string name="undo">Undo</string>
+
 </resources>
