--- a/res/values-en/strings.xml
+++ b/res/values-en/strings.xml
@@ -7,8 +7,8 @@
     <string name="add_row_name_caption">Activity</string>
     <string name="add_row_duration_caption">Duration (min.)</string>
     <string name="add_activity_title">Add new thing-to-do</string>
-    <string name="modify_activity_title">Modify thing-to-do</string>
-    <string name="delete_activity_title">Delete thing-to-do</string>
+    <string name="modify_activity_title">Modify</string>
+    <string name="delete_activity_title">Delete</string>
     <string name="delete_activity_text">Really want to delete this entry?</string>
     <string name="delete_button_text">Delete</string>
     <string name="dialog_cancel">Cancel</string>
