--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -36,9 +36,9 @@
     <string name="drawer_open">Options Menu</string>
     <string name="drawer_close">Parakeet</string>
     <string name="notification_on_leaving">Notification on exit time</string>
-    <string name="whatsnew">        - Added application drawer on the left\n
-        - Added a notification when it\'s exit time. You can disable it in the new Settings screen\n 
-        - Added this What\'s new screen\n</string>
+    <string name="whatsnew">        - Bugfix in notification-on-exit\n
+        - Now the list items can be deleted by swiping\n 
+        - Added undo when items are deleted</string>
 
     <!-- Help overlay -->
     <string name="help_finished">The short guide (wasn\'t it short?) has finished, now feel free to use the app!</string>
@@ -46,8 +46,12 @@
     <string name="time_to_leave_help_2">Here you can set the time you should leave</string>
     <string name="new_thing_help_1">Add things to do</string>
     <string name="new_thing_help_2">If you need to add a new thing to do use this.</string>
+    <string name="handle_todo_help_1">Change them!</string>
+    <string name="handle_todo_help_2">Change title and duration, or swipe to delete</string>
     <string name="set_alarm_help_1">Set alarm</string>
     <string name="set_alarm_help_2">Once you\'re done, you can trigger the alarm by tapping here</string>
+    <string name="handle_todo_help_1">Change them!</string>
+    <string name="handle_todo_help_2">Change title and duration, or swipe to delete</string>
     <string name="next_help">Next</string>
     <string name="action_help">Help</string>
 
@@ -59,4 +63,12 @@
     <!-- ACRA -->
     <string name="ACRACrash">ACRA error</string>
 
+    <!-- For EnhancedListView -->
+	<string name="undo">Undo</string>
+	<string name="undo_all">Undo All</string>
+    <string name="item_deleted">Item deleted</string>
+    <string name="n_items_deleted">%1$s items deleted</string>
+
+	<!-- EnhancedListView notifications -->
+	<string name="after_remove">Deleted</string>
 </resources>
