I wish it worked as Instant App, it did not.

--- a/parakeet-base/src/main/res/values/strings.xml
+++ b/parakeet-base/src/main/res/values/strings.xml
@@ -69,4 +69,5 @@
 
 	<!-- EnhancedListView notifications -->
 	<string name="after_remove">Deleted</string>
+    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://parakeet-instantapp.000webhostapp.com\",\n  }\n}]</string>
 </resources>
